docs(readme): 完善readme

--- a/src/assets/css/iconfont.less
+++ b/src/assets/css/iconfont.less
@@ -1,11 +1,8 @@
 @font-face {
   font-family: 'iconfont'; /* Project id 3338977 */
-  src: url('//at.alicdn.com/t/font_3338977_snzscf5pk0o.woff2?t=1651889967602')
-      format('woff2'),
-    url('//at.alicdn.com/t/font_3338977_snzscf5pk0o.woff?t=1651889967602')
-      format('woff'),
-    url('//at.alicdn.com/t/font_3338977_snzscf5pk0o.ttf?t=1651889967602')
-      format('truetype');
+  src: url('//at.alicdn.com/t/font_3338977_snzscf5pk0o.woff2?t=1651889967602') format('woff2'),
+    url('//at.alicdn.com/t/font_3338977_snzscf5pk0o.woff?t=1651889967602') format('woff'),
+    url('//at.alicdn.com/t/font_3338977_snzscf5pk0o.ttf?t=1651889967602') format('truetype');
 }
 
 .iconfont {
